Sync vscode launch with editor

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,8 @@
       "type": "godot",
       "request": "launch",
       "project": "${workspaceFolder}",
+      "port": 6007,
+      "debugServer": 6006,
       "debug_collisions": false,
       "debug_paths": false,
       "debug_navigation": false,
